Real Frame Implementation
- Issue with prevous commit where Main and CSFrame were not added. Added in this commit
- For changes, see previous commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-workspace/RemoteSystemsTempFiles/*
+workspace/RemoteSystemsTempFiles
 workspace/bin
-workspace/.metadata/*
+workspace/.metadata
 workspace/CreatureSim/.classpath
 workspace/CreatureSim/.project
